<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@drawable/rect_leftside_line"
                                                 android:elevation="10dp"
                                                 android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/addToolBar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/header_item_shape"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/addTitle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp">

            <LinearLayout
                android:id="@+id/layoutForSnackbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/edit_text_rect"
                    android:elevation="8dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nameField"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:elevation="20dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:textSize="24sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_rect"
                    android:elevation="8dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/breedField"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:elevation="15dp"
                        android:ems="10"
                        android:hint="@string/breed"
                        android:inputType="textPersonName"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:textSize="24sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_rect"
                    android:elevation="8dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/ageField"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:elevation="10dp"
                        android:ems="10"
                        android:hint="@string/age"
                        android:inputType="textPersonName|number"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:textSize="24sp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/register_button_rect"
                    android:elevation="8dp"
                    android:text="@string/registerNewCat"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>